Modernization plan: mark all phases complete
End-to-end verified on Java 21 / Guice 6 / Guava 32 / Jackson 2.17 / Lucene 10.5 /
ZK 3.9 / Curator 5.7: wikiticker ingest + query works in docker.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>